source/css/style.styl
@charset 'UTF-8'site-border = 1px solid #e2e2e2;

html {
    background-color: #fff;
    -webkit-font-smoothing: antialiased;
    transition: all 0.2s ease-out;
}

html[id='theme-dark-mode'] {
    filter: invert(1) hue-rotate(180deg);
}

html[id='theme-dark-mode'] img {
    filter: invert(1) hue-rotate(180deg);
}

body {
    color: rgba(0, 0, 0, 0.9);
    font-family: 'PingHei', 'PingFang SC', Helvetica Neue, 'Work Sans', 'Hiragino Sans GB', 'Microsoft YaHei', SimSun, sans-serif;
    font-size: 15px;
    width: 100%;
    margin: 0 auto 30px auto;
    background-color: #fff;
}

p {
    line-height: 1.9em;
    font-weight: 400;
    font-size: 15px;
}

a {
    text-decoration: none;
}

a:link, a:visited {
    opacity: 1;
    -webkit-transition: all 0.15s linear;
    -moz-transition: all 0.15s linear;
    -o-transition: all 0.15s linear;
    -ms-transition: all 0.15s linear;
    transition: all 0.15s linear;
    color: #424242;
}

a:hover, a:active {
    color: #4786D6;
}

/* basic styles ends */
/* animation starts */
.animated {
    -webkit-animation-fill-mode: both;
    -moz-animation-fill-mode: both;
    -ms-animation-fill-mode: both;
    -o-animation-fill-mode: both;
    animation-fill-mode: both;
    -webkit-animation-duration: 1s;
    -moz-animation-duration: 1s;
    -ms-animation-duration: 1s;
    -o-animation-duration: 1s;
    animation-duration: 1s;
}

.animated.hinge {
    -webkit-animation-duration: 1s;
    -moz-animation-duration: 1s;
    -ms-animation-duration: 1s;
    -o-animation-duration: 1s;
    animation-duration: 1s;
}

@keyframes fadeInDown {
    0% {
        opacity: 0;
        -webkit-transform: translateY(-20px);
    }

    100% {
        opacity: 1;
        -webkit-transform: translateY(0);
    }
}

@keyframes fadeInDown {
    0% {
        opacity: 0;
        -moz-transform: translateY(-20px);
    }

    100% {
        opacity: 1;
        -moz-transform: translateY(0);
    }
}

@keyframes fadeInDown {
    0% {
        opacity: 0;
        -o-transform: translateY(-20px);
    }

    100% {
        opacity: 1;
        -o-transform: translateY(0);
    }
}

@keyframes fadeInDown {
    0% {
        opacity: 0;
        transform: translateY(-20px);
    }

    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

.fadeInDown {
    -webkit-animation-name: fadeInDown;
    -moz-animation-name: fadeInDown;
    -o-animation-name: fadeInDown;
    animation-name: fadeInDown;
}

/* animation ends */
.content {
    height: auto;
    float: right;
    width: 70%;
    margin-top: 60px;
}

.page-top {
    width: 70%;
    position: fixed;
    right: 0;
    z-index: 3;
    background-color: #fff;
    height: 60px;
    border-bottom: site-border;

    .nav {
        list-style: none;
        padding: 18px 30px;
        float: left;
        font-size: 14px;

        li {
            position: relative;
            display: initial;
            padding-right: 20px;
        }

        a {
            color: #5A5A5A;
        }

        a:hover {
            color: #4786D6;
        }

        a.current {
            color: #5A5A5A;
            padding-bottom: 20px;
            border-bottom: 2px solid #4786D6;
        }
    }

    .information {
        float: right;
        padding-top: 12px;
        padding-right: 20px;

        .avatar {
            float: right;

            img {
                width: 32px;
                height: 32px;
                border-radius: 300px;
            }
        }

        .nav_right_btn {
            float: left;
            padding-top: 5px;
            margin-right: 10px;
            li {
                display: initial;
                padding-right: 5px;
            }
        }
    }
}

.sidebar {
    width: 30%;
    -webkit-background-size: cover;
    background-size: cover;
    background-color: #fff;
    height: 100%;
    transition: 0.8s;
    top: 0;
    left: 0;
    position: fixed;
    z-index: 4;
    border-right: site-border;

    .logo-title {
        text-align: center;
        margin-top: -50px;

        .description {
            font-size: 14px;
            color: #565654;
        }

        .logo {
            margin: 0 auto;
        }

        .title {
            h3 {
                text-transform: none;
                font-size: 2rem;
                font-weight: bold;
                letter-spacing: 2px;
                line-height: 1;
                margin: 0;
            }

            a {
                text-decoration: none;
                color: #464646;
                font-size: 2rem;
                font-weight: bold;
            }
        }
    }

    .social-links {
        list-style: none;
        padding: 0;
        font-size: 14px;
        text-align: center;

        i {
            margin-right: 3px;
        }

        li {
            display: inline;
            padding: 0 4px;
            line-height: 0;
        }

        a {
            color: #565654;
        }

        a:hover {
            color: #4786D6;
        }
    }
}

.sidebar-top {
    margin: auto 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;

    .ltr {
        text-align: center;
    }
}

.card {
    margin-left: 5px;
}
/* ... */

